Fixed history on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -274,7 +274,6 @@ nav .darkModeLogo{
   overflow-x: scroll;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;
-  justify-content: center;
 }
 
 #searchHistory::-webkit-scrollbar{ display: none; }
